--- a/app/src/main/res/layout/eachbooking.xml
+++ b/app/src/main/res/layout/eachbooking.xml
@@ -11,7 +11,8 @@
     <TextView
         android:id="@+id/rowTime"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/rowDrName"
@@ -23,6 +24,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        android:src="@drawable/view_booking_img" />
 
 
 </LinearLayout>
