--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -1,140 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="comp231.drbooking.BookingDetails"
-    android:orientation="vertical">
-
-
-    <TextView
-        android:id="@+id/txtBookingActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/dashboard_segment1"
-        android:text=""
-        android:hint="Hospital Name &amp; Address Appears Here"
-        android:inputType="textMultiLine"
-        android:minLines="5"
-        android:maxLines="10"
-        android:scrollbars="vertical"
-        android:gravity="top|left"
-
-        />
-
-    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingTop="10dp"><!--android:entries="@array/DrNames"-->
-        <Spinner
-            android:id="@+id/spinSpecialtyList"
-
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight=".8"
-            android:background="@color/dashboard_segment4_h"
-            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight=".2"
-            android:textSize="12sp"/>
-
-
-    </LinearLayout>
-    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingTop="10dp"><!--android:entries="@array/DrNames"-->
-        <Spinner
-            android:id="@+id/spinDrList"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight=".8"
-            android:background="@color/dashboard_segment4_h"
-            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
-
-        <Button
-            android:id="@+id/btnDrProfile"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight=".2"
-            android:text="Profile"
-            android:textSize="12sp"
-            android:onClick="clk_drProfile"/>
-    </LinearLayout>
-
-
-    <!--   <LinearLayout
-           android:orientation="vertical"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:layout_weight=".93">
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:background="@drawable/listgrad"
-               android:text="@string/actionbar_text"
-               style="@style/actionbar_text"/>
-       </LinearLayout>-->
+    android:padding="10dp"
+    tools:context="comp231.drbooking.BookingDetails">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight=".07"
-        android:orientation="vertical"
-        android:paddingTop="10dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtDate"
-                android:layout_width="0dip"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="0.5"
-                android:background="@color/dashboard_segment3"
-                android:hint="Wed,4 Apr 2018"
-                android:textAlignment="center"
-                android:textSize="20sp" />
+                android:text="Clinic Info"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="20px"
+                android:layout_marginTop="20px"
+                android:background="@android:color/darker_gray" />
 
             <TextView
-                android:id="@+id/txtTime"
-                android:layout_width="0dip"
+                android:id="@+id/txtBookingActivity"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="0.5"
-                android:background="@color/dashboard_segment4"
-                android:hint="hh:mm  AM/PM"
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-
+                android:hint="Hospital Name &amp; Address Appears Here"
+                android:inputType="textMultiLine"
+                android:maxLines="2"
+                android:minLines="2" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="150dp"
-            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btnBookApp"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="S A V E"
-                android:onClick="clk_SaveAppoint"/>
+                android:text="Physician"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btnCancelApp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Cancel Appointment"
-                android:onClick="clk_CancelAppoint"
-                />
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="20px"
+                android:layout_marginTop="20px"
+                android:background="@android:color/darker_gray" />
         </LinearLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="10px"
+            android:background="@drawable/spinner_background"
+            android:layout_marginTop="10dp">
+
+            <Spinner
+                android:id="@+id/spinSpecialtyList"
+                style="@style/Widget.AppCompat.DropDownItem.Spinner"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                tools:listitem="@layout/support_simple_spinner_dropdown_item" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="10dp"><!--android:entries="@array/DrNames"-->
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_margin="10px"
+                android:layout_weight=".65"
+                android:background="@drawable/spinner_background">
+
+                <Spinner
+                    android:id="@+id/spinDrList"
+                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/btnDrProfile"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight=".35"
+                android:onClick="clk_drProfile"
+                android:text="View Profile"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+
+        <!--   <LinearLayout
+               android:orientation="vertical"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:layout_weight=".93">
+               <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:background="@drawable/listgrad"
+                   android:text="@string/actionbar_text"
+                   style="@style/actionbar_text"/>
+           </LinearLayout>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Date and time"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="20px"
+                android:layout_marginTop="20px"
+                android:background="@android:color/darker_gray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txtDate"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0.5"
+                    android:text="Wed,4 Apr 2018"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/txtTime"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0.5"
+                    android:text="hh:mm  AM/PM"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnBookApp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:onClick="clk_SaveAppoint"
+            android:text="S A V E" />
+
+        <Button
+            android:id="@+id/btnCancelApp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="clk_CancelAppoint"
+            android:text="Cancel Appointment" />
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
