--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -83,7 +83,7 @@
                 android:text="" />
         </TableRow>
 
-        <TableRow
+ <!--       <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -101,7 +101,7 @@
                 android:hint="Enter your last name"
                 android:inputType="textPersonName"
                 android:text="" />
-        </TableRow>
+        </TableRow>-->
 
         <TableRow
             android:layout_width="wrap_content"
