--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,6 +24,29 @@
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:width="100dp"
+                android:text="User Name: "
+                android:textAlignment="viewStart" />
+
+            <EditText
+                android:id="@+id/txtEditId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Enter a user name"
+                android:inputType="textPersonName"
+                android:text="" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -204,6 +227,18 @@
                 android:layout_span="2"
                 android:onClick="btnClk_UpdateUser"
                 android:text="Update User Profile" />
+
+
+        </TableRow>
+        <TableRow android:paddingTop="20dp">
+
+            <Button
+                android:id="@+id/btnDeleteUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
+                android:onClick="btnClk_DeleteUser"
+                android:text="Delete User" />
 
 
         </TableRow>
