Hard coded nearby clinics as JSON file in raw folder. Google limited my Places API.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="DrNames" >
-        <item>~~~~~Select a Doctor~~~~~</item>
+        <item>~Select Doctor~</item>
         <item>Doctor 1</item>
         <item>Lady Doctor 1</item>
         <item>John Doe</item>
